# bedrock-claude-chat

./: .gitignore  deploy.yml  pyproject.toml
backend/: run.sh
backend/app/: config.py  main.py  vector_search.py
tests/: post-conversion-m2-bot.json  post-conversion-pdf-bot.json
