[project]
name = "bedrock-claude-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Wolfgang Schult",email = "wolfgang.schult@m2dot.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "boto3 (>=1.36.5,<2.0.0)",
    "pyhumps (>=3.8.0,<4.0.0)",
    "mypy-boto3-bedrock-runtime (>=1.36.2,<2.0.0)",
    "python-ulid (>=3.0.0,<4.0.0)",
    "duckduckgo-search (>=7.2.1,<8.0.0)",
    "mypy-boto3-bedrock-agent-runtime (>=1.36.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
